--- a/Cation.conf
+++ b/Cation.conf
@@ -6,14 +6,14 @@ server=119.29.29.29
 server=8.8.8.8
 [policy]
 static=🎶 TikTok, 🌍 Proxy, 🏃 Auto HK, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto US, 🇰🇷 Auto KR, 🚀 Direct, img-url=TikTok.PNG
-available=🇰🇷 Auto KR,删除此条,删除此条, img-url=KR.PNG
-available=🏃 Auto BGP, 删除此条,删除此条, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/BGP.png
-available=♾ IPLC, 删除此条,删除此条, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/IPLC.png
-available=🇨🇳 Auto Return, 删除此条,删除此条, img-url=China.PNG
-available=🏃 Auto US, 删除此条,删除此条, img-url=US.PNG
-available=🏃 Auto JP, 删除此条,删除此条, img-url=JP.PNG
-available=🏃 Auto TW, 删除此条,删除此条, img-url=TW.PNG
-available=🏃 Auto HK, 删除此条,删除此条, img-url=Hongkong.PNG
+available=🇰🇷 Auto KR,删除此条后添加自己的节点,删除此条后添加自己的节点, img-url=KR.PNG
+available=🏃 Auto BGP, 删除此条后添加自己的节点,删除此条后添加自己的节点, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/BGP.png
+available=♾ IPLC, 删除此条后添加自己的节点,删除此条后添加自己的节点, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/IPLC.png
+available=🇨🇳 Auto Return, 删除此条后添加自己的节点,删除此条后添加自己的节点, img-url=China.PNG
+available=🏃 Auto US, 删除此条后添加自己的节点,删除此条后添加自己的节点, img-url=US.PNG
+available=🏃 Auto JP, 删除此条后添加自己的节点,删除此条后添加自己的节点, img-url=JP.PNG
+available=🏃 Auto TW, 删除此条后添加自己的节点,删除此条后添加自己的节点, img-url=TW.PNG
+available=🏃 Auto HK, 删除此条后添加自己的节点,删除此条后添加自己的节点, img-url=Hongkong.PNG
 static=💻 Domestic,🏃 Auto TW, 🚀 Direct, img-url=Domestic.PNG
 static=📧 Mail, 🌍 Proxy, 🏃 Auto US, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto HK, 🇰🇷 Auto KR, 🚀 Direct, img-url=Mail.PNG
 static=🔞 Adult Web, 🌍 Proxy, 🏃 Auto US, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto HK, 🇰🇷 Auto KR, 🚀 Direct, img-url=Pornhub.PNG
