--- a/Cation.conf
+++ b/Cation.conf
@@ -5,15 +5,15 @@ server=114.114.114.114
 server=119.29.29.29
 server=8.8.8.8
 [policy]
+available=🇰🇷 Auto KR,删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=KR.PNG
+available=🏃 Auto BGP, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/BGP.png
+available=♾ IPLC, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/IPLC.png
+available=🇨🇳 Auto Return, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=China.PNG
+available=🏃 Auto US, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=US.PNG
+available=🏃 Auto JP, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=JP.PNG
+available=🏃 Auto TW, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=TW.PNG
+available=🏃 Auto HK, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=Hongkong.PNG
 static=🎶 TikTok, 🌍 Proxy, 🏃 Auto HK, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto US, 🇰🇷 Auto KR, 🚀 Direct, img-url=TikTok.PNG
-available=🇰🇷 Auto KR,删除此条后添加自己的节点,删除此条后添加自己的节点, img-url=KR.PNG
-available=🏃 Auto BGP, 删除此条后添加自己的节点,删除此条后添加自己的节点, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/BGP.png
-available=♾ IPLC, 删除此条后添加自己的节点,删除此条后添加自己的节点, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/IPLC.png
-available=🇨🇳 Auto Return, 删除此条后添加自己的节点,删除此条后添加自己的节点, img-url=China.PNG
-available=🏃 Auto US, 删除此条后添加自己的节点,删除此条后添加自己的节点, img-url=US.PNG
-available=🏃 Auto JP, 删除此条后添加自己的节点,删除此条后添加自己的节点, img-url=JP.PNG
-available=🏃 Auto TW, 删除此条后添加自己的节点,删除此条后添加自己的节点, img-url=TW.PNG
-available=🏃 Auto HK, 删除此条后添加自己的节点,删除此条后添加自己的节点, img-url=Hongkong.PNG
 static=💻 Domestic,🏃 Auto TW, 🚀 Direct, img-url=Domestic.PNG
 static=📧 Mail, 🌍 Proxy, 🏃 Auto US, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto HK, 🇰🇷 Auto KR, 🚀 Direct, img-url=Mail.PNG
 static=🔞 Adult Web, 🌍 Proxy, 🏃 Auto US, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto HK, 🇰🇷 Auto KR, 🚀 Direct, img-url=Pornhub.PNG
@@ -29,7 +29,6 @@ static=🎥 YouTube, 🌍 Proxy, 🏃 Auto US, 🏃 Auto JP, 🏃 Auto TW, 🏃 
 static=📺 Netflix, 🌍 Proxy, 🏃 Auto US, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto HK, 🇰🇷 Auto KR, 🚀 Direct, img-url=Netflix.PNG
 static=🚦 Advertising, reject , img-url=Adblock.PNG
 static=💬 Final, 🌍 Proxy, 🚀 Direct,img-url=Final.PNG
-
 static=🌍 Proxy, 🏃 Auto HK, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto US, 🇰🇷 Auto KR, ♾ IPLC, 🚀 Direct, img-url=Proxy.PNG
 [server_remote]
 https://jiji.world/link/TeEG7ySjPneDCw3E, enabled=true
@@ -77,10 +76,6 @@ DOMAIN-SUFFIX,twitpic.com, 📬 Twitter
 DOMAIN-SUFFIX,vine.co, 📬 Twitter
 DOMAIN-KEYWORD,twitter, 📬 Twitter
 
-;user-agent, ?abc*, 🌍 Proxy
-;host, www.google.com, 🌍 Proxy
-;host-keyword, adsite, reject
-;host-suffix, googleapis.com, 🌍 Proxy
 ip-cidr, 10.0.0.0/8, direct
 ip-cidr, 127.0.0.0/8, direct
 ip-cidr, 172.16.0.0/12, direct
