--- a/Cation.conf
+++ b/Cation.conf
@@ -5,31 +5,46 @@ server=114.114.114.114
 server=119.29.29.29
 server=8.8.8.8
 [policy]
-available=🇰🇷 Auto KR,删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=KR.PNG
+available=🇰🇷 Auto KR,删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Korea.png
+
 available=🏃 Auto BGP, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/BGP.png
 available=♾ IPLC, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/IPLC.png
 available=🇨🇳 Auto Return, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=China.PNG
-available=🏃 Auto US, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=US.PNG
-available=🏃 Auto JP, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=JP.PNG
-available=🏃 Auto TW, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=TW.PNG
-available=🏃 Auto HK, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=Hongkong.PNG
-static=🎶 TikTok, 🌍 Proxy, 🏃 Auto HK, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto US, 🇰🇷 Auto KR, 🚀 Direct, img-url=TikTok.PNG
-static=💻 Domestic,🏃 Auto TW, 🚀 Direct, img-url=Domestic.PNG
-static=📧 Mail, 🌍 Proxy, 🏃 Auto US, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto HK, 🇰🇷 Auto KR, 🚀 Direct, img-url=Mail.PNG
-static=🔞 Adult Web, 🌍 Proxy, 🏃 Auto US, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto HK, 🇰🇷 Auto KR, 🚀 Direct, img-url=Pornhub.PNG
-static=🍎 Apple, 🌍 Proxy, 🏃 Auto US, 🏃 Auto TW, 🏃 Auto JP, 🏃 Auto HK, 🇰🇷 Auto KR, 🚀 Direct, img-url=Apple.PNG
-static=🇺🇸 EncoreTVB, 🏃 Auto US, img-url=EncoreTvb.PNG
-static=🇯🇵 AbemaTV, 🏃 Auto JP, img-url=AbemaTV.PNG
-static=📬 Twitter, 🏃 Auto US, img-url=Twitter.PNG
-static=✈️ Telegram, 🌍 Proxy, 🏃 Auto HK, 🏃 Auto TW, 🏃 Auto JP, 🏃 Auto US, 🇰🇷 Auto KR, ♾ IPLC, 🚀 Direct, img-url=TG.PNG
-static=🧭 Speedtest, 🌍 Proxy, 🏃 Auto HK, 🏃 Auto TW, 🏃 Auto JP, 🏃 Auto US, 🇰🇷 Auto KR, 🚀 Direct, ♾ IPLC, img-url=Speedtest.PNG
-static=🍭 Bahamut, 🏃 Auto TW, img-url=Bahamut.PNG
-static=🚀 Direct, direct , img-url=direct.PNG
-static=🎥 YouTube, 🌍 Proxy, 🏃 Auto US, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto HK, 🇰🇷 Auto KR, 🚀 Direct, img-url=YouTube.PNG
-static=📺 Netflix, 🌍 Proxy, 🏃 Auto US, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto HK, 🇰🇷 Auto KR, 🚀 Direct, img-url=Netflix.PNG
-static=🚦 Advertising, reject , img-url=Adblock.PNG
-static=💬 Final, 🌍 Proxy, 🚀 Direct,img-url=Final.PNG
-static=🌍 Proxy, 🏃 Auto HK, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto US, 🇰🇷 Auto KR, ♾ IPLC, 🚀 Direct, img-url=Proxy.PNG
+available=🏃 Auto US, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/United_States.png
+
+available=🏃 Auto JP, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Japan.png
+
+available=🏃 Auto TW, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Taiwan.png
+available=🏃 Auto HK, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Hong_Kong.png
+static=🎶 TikTok, 🌍 Proxy, 🏃 Auto HK, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto US, 🇰🇷 Auto KR, 🚀 Direct, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/TikTok.png
+
+
+static=💻 Domestic,🏃 Auto TW, 🚀 Direct, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Domestic.png
+static=📧 Mail, 🌍 Proxy, 🏃 Auto US, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto HK, 🇰🇷 Auto KR, 🚀 Direct, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Mail.png
+static=🔞 Adult Web, 🌍 Proxy, 🏃 Auto US, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto HK, 🇰🇷 Auto KR, 🚀 Direct, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Pornhub.png
+
+static=🍎 Apple, 🌍 Proxy, 🏃 Auto US, 🏃 Auto TW, 🏃 Auto JP, 🏃 Auto HK, 🇰🇷 Auto KR, 🚀 Direct, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Apple.png
+static=🇺🇸 EncoreTVB, 🏃 Auto US, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/*0.1.png
+
+static=🇯🇵 AbemaTV, 🏃 Auto JP, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/*0.3.png
+
+static=📬 Twitter, 🏃 Auto US, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Twitter.png
+
+static=✈️ Telegram, 🌍 Proxy, 🏃 Auto HK, 🏃 Auto TW, 🏃 Auto JP, 🏃 Auto US, 🇰🇷 Auto KR, ♾ IPLC, 🚀 Direct, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Telegram.png
+
+static=🧭 Speedtest, 🌍 Proxy, 🏃 Auto HK, 🏃 Auto TW, 🏃 Auto JP, 🏃 Auto US, 🇰🇷 Auto KR, 🚀 Direct, ♾ IPLC, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Speedtest.png
+
+
+static=🍭 Bahamut, 🏃 Auto TW, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/*0.5.png
+
+static=🚀 Direct, direct , img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Direct.png
+
+static=🎥 YouTube, 🌍 Proxy, 🏃 Auto US, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto HK, 🇰🇷 Auto KR, 🚀 Direct, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/YouTube.png
+static=📺 Netflix, 🌍 Proxy, 🏃 Auto US, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto HK, 🇰🇷 Auto KR, 🚀 Direct, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Netflix.png
+static=🚦 Advertising, reject , img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Advertising.png
+
+static=💬 Final, 🌍 Proxy, 🚀 Direct, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Final.png
+static=🌍 Proxy, 🏃 Auto HK, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto US, 🇰🇷 Auto KR, ♾ IPLC, 🚀 Direct, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Proxy.png
 [server_remote]
 https://jiji.world/link/TeEG7ySjPneDCw3E, enabled=true
 [filter_remote]
