--- a/Cation.conf
+++ b/Cation.conf
@@ -5,17 +5,17 @@ server=114.114.114.114
 server=119.29.29.29
 server=8.8.8.8
 [policy]
-available=🇰🇷 Auto KR,删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Korea.png
+available=🇰🇷 Auto KR,Tg频道：https://t.me/ZCUR8MG,删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Korea.png
 
-available=🏃 Auto BGP, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/BGP.png
-available=♾ IPLC, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/IPLC.png
-available=🇨🇳 Auto Return, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=China.PNG
-available=🏃 Auto US, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/United_States.png
+available=🏃 Auto BGP,Tg频道：https://t.me/ZCUR8MG,删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/BGP.png
+available=♾ IPLC, Tg频道：https://t.me/ZCUR8MG,删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/IPLC.png
+available=🇨🇳 Auto Return, Tg频道：https://t.me/ZCUR8MG,删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=China.PNG
+available=🏃 Auto US, Tg频道：https://t.me/ZCUR8MG,删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/United_States.png
 
-available=🏃 Auto JP, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Japan.png
+available=🏃 Auto JP, Tg频道：https://t.me/ZCUR8MG,删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Japan.png
 
-available=🏃 Auto TW, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Taiwan.png
-available=🏃 Auto HK, 删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Hong_Kong.png
+available=🏃 Auto TW, Tg频道：https://t.me/ZCUR8MG,删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Taiwan.png
+available=🏃 Auto HK, Tg频道：https://t.me/ZCUR8MG,删除此条后添加自己的节点,设置页面添加机场订阅链接, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/Hong_Kong.png
 static=🎶 TikTok, 🌍 Proxy, 🏃 Auto HK, 🏃 Auto JP, 🏃 Auto TW, 🏃 Auto US, 🇰🇷 Auto KR, 🚀 Direct, img-url=https://raw.githubusercontent.com/zealson/Zure/master/IconSet/TikTok.png
 
 
